# AutoPrinter

./: README.md  pyproject.toml
src/: main.py
src/auto_printer/: arg_parser.py  logger.py  printer.py  settings.py
src/auto_printer/file_watcher/: directory_watcher.py  event_handler.py
src/tests/: test_event_handler.py  test_parser.py  test_printer.py
